# laura32

./: .gitignore  README.md
docs/: operation.md
firmware/: CMakeLists.txt  LICENSE  README.md
firmware/src/: main.c
hardware/kicad/: LICENSE  README.md  laura32.kicad_pro  laura32.kicad_sch  sensor-node.kicad_pcb  sensor-node.kicad_pro  sensor-node.kicad_sch
hardware/kicad/laura32/: laura32.kicad_pcb
hardware/mechanical/: LICENSE  README.md
